--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  email: MyString
-
-two:
-  name: MyString
-  email: MyString
+Shriya:
+  name: Shriya Diwate
+  email: shriya.diwate@weboniselab.com
+  password_digest: <%= User.digest('test123456') %>
