--- a/test/fixtures/microposts.yml
+++ b/test/fixtures/microposts.yml
@@ -20,6 +20,27 @@ most_recent:
   created_at: <%= Time.zone.now %>
   user: Shriya
 
+ants:
+  content: "Oh, is that what you want? Because that's how you get ants!"
+  created_at: <%= 2.years.ago %>
+  user: Shraddha
+
+zone:
+  content: "Danger zone!"
+  created_at: <%= 3.days.ago %>
+  user: Shraddha
+
+tone:
+  content: "I'm sorry. Your words made sense, but your sarcastic tone did not."
+  created_at: <%= 10.minutes.ago %>
+  user: Anuj
+
+van:
+  content: "Dude, this van's, like, rolling probable cause."
+  created_at: <%= 4.hours.ago %>
+  user: Anuj
+
+
 <% 30.times do |n| %>
 micropost_<%= n %>:
   content: <%= Faker::Lorem.sentence(5) %>
